@@ -36,6 +36,7 @@
 - added: a new method `PATH.updates`
 - added: easy updating of applications via `UPDATE(versions, [callback], [pause_server_message])`
 - added: NOSQL counter `.reset([type], [id], [date], [callback])` method-
+- added: `session.listlive(callback)` returns all live items in session
 
 - updated: `WEBSOCKET()` supports `+`, `-` and `🔒` as authorization flags
 - updated: `LOAD()` supports `service` type
